# realistic-adaptive-merging

./: .gitignore  README.md  deleted.md  pyproject.toml  tasks.yaml  vares.yaml
compute_clusters/: build_table.py  check_logs.py  cluster_setup.md  start_env.sh  submit.sh  submit_example.sbatch
experiments/: ablation_selection_methods.sh  ablation_tuning_designs.sh  hub_selection.sh  hub_selection_all_hf.sh  hub_selection_lora_excluded.sh  hub_selection_lowdata.sh  hub_selection_qwen.sh  last_section_exps.sh  last_section_task_info.sh  lora_baseline.sh  lora_eval.sh  mass_eval.sh  run_adaptive_merging.sh  run_adaptive_merging_lowdata.sh  run_adaptive_merging_qwen.sh  run_arrow.sh  run_baseline_all.sh  run_hub_selection_generation.sh  run_lorahub_grad_based.sh  run_lorahub_grad_free.sh  run_lorahub_grad_free_10sample.sh  run_lorahub_grad_free_qwen.sh  task_info.sh
jobs/: cache_hf_repos.py  lorahub_load_experts.py  run_evaluation.py  run_gradfree_lorahub.py  run_hub_selection.py  run_merging.py  run_tuning.py
notebooks/: evaluate_expert.ipynb  parse_lora_training_result.ipynb  plot_task_representation.ipynb  read_hf_target_task_output.ipynb
peft_extension/: __init__.py  utils.py
scripts/: base_model.py  evaluation.py  llama_child.py  model_builder.py  model_closeness_metrics.py  qwen_child.py  results_to_csv.py  update_task_names.py
utils/: calculate_eval_metrics.py  log_parser.py  logging_utils.py  merge_utils.py  misc_utils.py
weight_processing/: __init__.py  average_lora_deltas.py  collect_lora_experts.py  hierarchical_model_id_scan.py
(+2308 files in other folders)
