[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moose"
version = "0.1.0"
description = "Moose experiment environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "deepspeed>=0.16.5",
    "ipykernel>=6.29.5",
    "notebook",
    "wandb",
    "accelerate",
    "matplotlib",
    "transformers==4.56.1",
    "peft==0.15.1",
    "datasets==3.6.0",
    "trl==0.24.0",
    "bitsandbytes>=0.45.5",
    "evaluate==0.4.3",
    "pynvml",
    "statsmodels",
    "rouge-score",
    "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.4.11/flash_attn-2.8.3+cu126torch2.8-cp312-cp312-linux_x86_64.whl",
    "ipdb",
    "colorama",
]

[tool.hatch.metadata]
allow-direct-references = true
